<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of Todo.txt Touch, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2012 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt Touch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt Touch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt Touch.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2012 Todo.txt contributors (http://todotxt.com)
@copyright 2013 Mark Janssen
-->
<!--suppress ALL -->
<resources>
    <string name="invalid_context">Invalid list name</string>
    <string name="invalid_project">Invalid tag name</string>

    <string name="app_label">Simpletask</string>
    <string name="added_task">Added task</string>
    <string name="add_task_failed">Could not add task</string>
    <string name="save_task">Save task</string>
    <string name="update_task_failed">Could not update task</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="main_no_items">No tasks to display.</string>
    <string name="set_preferences">Settings</string>
    <string name="preferences">Settings</string>
    <string name="sync">Refresh</string>
    <string name="changelist">Select list</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="addtask">Add Task</string>
    <string name="updatetask">Update Task(s)</string>
    <string name="viewtask">View Task</string>
    <string name="cleartask">Clear Task</string>
    <string name="done">Complete</string>
    <string name="priority">Prioritize</string>
    <string name="select_priority">Select priority</string>
    <string name="add_list_or_tag">Add lists and tags</string>
    <string name="remove_list_or_tag">Remove lists and tags</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="defer">Defer task</string>
    <string name="share">Share</string>
    <string name="unComplete">Undo complete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_filter">Clear filter</string>
    <string name="tasktexthint">Call Mom @phone +Birthday\nBuy gift @errands +Birthday</string>
    <string name="shortcut_name_empty">No name specified, not creating shortcut</string>
    <string name="add_task_help">Add or update a task to the task list. When adding tasks,
        each line is a separate task for quick adding.\n
        <b>Priority</b>\n
        start the line with (.), like (A)\n
        <b>Tags</b>
        start with a + sign, like +Kitchen\n
        <b>Lists</b>
        start with an @ sign, like @home\n
        A task can include any number of tags or be on multiple
        lists.
    </string>

    <!-- preferences -->
    <string name="ARCHIVE_settings_header">Archive</string>
    <string name="ARCHIVE_settings_summary">Settings for archiving completed tasks in done.txt</string>
    <string name="auto_archive_pref_title">Auto archive</string>
    <string name="auto_archive_pref_summary">Automatically archive tasks to done.txt on completion.</string>
    <string name="archive_now_pref_title">Archive now</string>
    <string name="archive_now_pref_summary">Move completed tasks from todo.txt to done.txt.</string>
    <string name="dropbox_logout_pref_title">Log out</string>
    <string name="dropbox_logout_pref_summary">Log out of Dropbox.</string>
    <string name="TODOTXTPATH_title">File location</string>
    <string name="TODOTXTPATH_summary">The Dropbox folder where todo.txt is stored.</string>
    <string name="TODOTXTPATH_defaultPath">/todo</string>
    <string name="DROPBOX_settings_header">Dropbox</string>
    <string name="DROPBOX_settings_summary">Settings for Dropbox synchronisation</string>

    <string name="todotxt_settings_header">Main</string>
    <string name="todotxt_settings_summary">Application wide settings</string>
    <string name="sort_complete_last_pref_title">Show completed last</string>
    <string name="sort_complete_last_pref_summary">Always display the completed tasks at the bottom of the list
    </string>
    <string name="use_prio_pref_title">Enable priorities</string>
    <string name="use_prio_pref_summary">GTD does not promote using of priorities, but you can use it if needed.
    </string>
    <string name="prepend_date_pref_title">Date new tasks</string>
    <string name="prepend_date_pref_summary">Automatically add creation date to new tasks.</string>
    <string name="defer_threshold_date_pref_title">Defer by threshold date</string>
    <string name="defer_threshold_date_pref_summary">Defer tasks using the threshold date (t:yyy-mm-dd).
        If unchecked defer by due date (due:yyyy-mm-dd) instead.</string>
    <string name="line_breaks_pref_title">Windows line breaks</string>
    <string name="line_breaks_pref_summary">Use Windows-friendly line breaks in the text file.</string>
    <string name="swipe_complete_pref_title">Swipe to complete</string>
    <string name="swipe_complete_pref_summary">Swipe over a task to complete it.</string>
    <string name="manual_sync_pref_title">Manual sync</string>
    <string name="manual_sync_pref_summary">Don\'t automatically upload every change to Dropbox.</string>
    <string name="font_size_delta_pref_title">Change font size</string>
    <string name="font_size_delta_pref_summary">Change the font size in units of sp.
        Use negative values to decrease the font size</string>


    <string name="about_settings_header">About</string>
    <string name="about_settings_summary">Application information</string>
    <string name="visit_website_title">Go to the website</string>
    <string name="visit_website_summary">Visit the Simpletask website</string>
    <string name="visit_website_data">http://mpcjanssen.nl/cgi-bin/simpletask</string>

    <string name="visit_tracker_title">Request a feature or log a bug</string>
    <string name="visit_tracker_summary">Request a new feature or enhancement or report a problem.</string>
    <string name="visit_tracker_data">http://mpcjanssen.nl/cgi-bin/simpletask/tktnew</string>

    <string name="donate_title">Donate</string>
    <string name="donate_summary">Donate if you like simpletask. NOTE: Donation is voluntary, simpletask will always be
        free.
    </string>
    <string name="visit_donate_data">http://bit.ly/VYR7Fq</string>
    <!-- sync dialog -->
    <string name="sync_dialog_title">Manual Sync</string>
    <string name="sync_dialog_msg">Do you want to upload or download your todo.txt file?</string>
    <string name="sync_dialog_upload">Upload to Dropbox</string>
    <string name="sync_dialog_download">Download to device</string>
    <string name="sync_upload_message">Uploading todo.txt…</string>
    <string name="sync_download_message">Downloading todo.txt…</string>
    <!-- sync conflict dialog -->
    <string name="sync_conflict_dialog_title">File Conflict</string>
    <string name="sync_conflict_dialog_msg">Oops! There is a newer version of your todo.txt file in Dropbox. \nDo you
        want to upload your local changes, or download the Dropbox version?
    </string>
    <!-- login -->
    <string name="first_title_word">Simpletask</string>
    <string name="login_screen_button">Log in to Dropbox</string>
    <string name="login_screen_offline_button">Work offline</string>
    <!-- delete -->
    <string name="delete_task_title">Delete Task</string>
    <string name="delete_task_message">This cannot be undone. Are you sure?</string>
    <string name="delete_task_confirm">Delete</string>
    <!-- search -->
    <string name="search_hint">Search todo.txt</string>
    <!-- sort -->
    <string name="sort_help">Drag and drop to change the sort order. Click the items to change sort direction.</string>
    <string name="file_order">File Order (unsorted)</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="by_prio">By Priority</string>
    <string name="by_project">By Tag</string>
    <string name="by_context">By List</string>
    <string name="completed">Completed</string>
    <string name="by_creation_date">By Creation Date</string>
    <string name="in_future">Threshold date in future</string>
    <string name="by_due_date">By Due Date</string>
    <string name="by_threshold_date">By Threshold Date</string>
	
    <!-- filter -->
    <string name="filter_select_all">Select all</string>
    <string name="filter_clear_all">Clear filter</string>
    <string name="filter_invert">Invert filter</string>
    <string name="add_filter_shortcut">Add shortcut</string>
    <string name="create_widget">Create widget</string>
	

    <!-- title bar changes -->
    <string name="title_filter_applied">Filtered by:</string>
    <string name="add_task_help_btn">Help</string>
    <string name="priority_prompt">Priority</string>
    <string name="priority_short_prompt">Prio</string>
    <string name="project_prompt">Tag</string>
    <string name="context_prompt">List</string>
    <string name="separator">Separator</string>

    <!-- launcher shortcut -->
    <string name="shortcut_addtask_name">Add Task</string>
    <!-- share -->
    <string name="share_addtask_name">Add to Simpletask</string>

    <!-- Relative Dates -->
    <string name="dates_days_ago">%d days ago</string>
    <string name="dates_one_day_ago">1 day ago</string>
    <string name="dates_today">today</string>
    <string name="dates_tomorrow">tomorrow</string>
    <string name="dates_months_ago">%d months ago</string>
    <string name="dates_one_month_ago">1 month ago</string>
    <string name="dates_one_week">1 week</string>
    <string name="dates_two_weeks">2 weeks</string>
    <string name="dates_one_month">1 month</string>
    <string name="date_pick">pick date</string>


    <string name="title_activity_filter">Filter</string>
    <string name="selected">selected</string>
    <string name="no_context">Inbox</string>
    <string name="no_project">No tag</string>
    <string name="no_creation_date">No date</string>
    <string name="no_prio">-</string>
    <string name="add_to_calendar">Add reminder</string>
    <string name="calendar_title">Simpletask reminder</string>
    <string name="version_copied">Version info copied to clipboard</string>

    <string name="task_added">Task added</string>
    <string name="default_sort">Default sort</string>
    <string name="pull_to_refresh_refreshing_label">Syncing with dropbox…</string>
    <string name="not_tagged">Tasks not on list or tagged</string>
    <string name="new_list_name">Input new list</string>
    <string name="new_tag_name">Input new tag</string>


</resources>
