<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            android:key="logout_dropbox"
            android:title="@string/dropbox_logout_pref_title"
            android:summary="@string/dropbox_logout_pref_summary"/>
    <Preference
            android:title="@string/visit_website_title"
            android:summary="@string/visit_website_summary">

        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/visit_website_data"/>
    </Preference>

    <Preference
                android:title="@string/donate_title"
                android:summary="@string/donate_summary">

            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/visit_donate_data" />
    </Preference>
</PreferenceScreen>
