<!--suppress ALL -->


<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/menu_select_all"
            android:orderInCategory="100"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/select_all"
            android:title="@string/filter_select_all"/>
    <item
            android:id="@+id/menu_clear_all"
            android:orderInCategory="100"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/delete"
            android:title="@string/filter_clear_all"/>
    <item
            android:id="@+id/menu_apply_filter"
            android:orderInCategory="100"
            android:showAsAction="ifRoom|withText"
            android:icon="@drawable/labels"
            android:title="@string/filter"/>
    <item
            android:id="@+id/menu_add_filter_shortcut"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/add_filter_shortcut"/>

</menu>
