<?xml version="1.0" encoding="utf-8"?>
<!--
This file is part of Todo.txt Touch, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2012 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt Touch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt Touch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt Touch.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2012 Todo.txt contributors (http://todotxt.com)
-->

<!--suppress ALL -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/home_root"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:divider="?android:attr/dividerVertical"
              android:showDividers="middle"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="?android:attr/dividerHorizontal"
            style="?android:attr/buttonBarStyle"
            android:showDividers="middle">

        <Button
                android:id="@+id/btnPriority"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/priority_short_prompt"
                />


        <Button
                android:id="@+id/btnContext"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/context_prompt"
                style="?android:attr/borderlessButtonStyle"
                />


        <Button
                android:id="@+id/btnProject"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/project_prompt"
                style="?android:attr/borderlessButtonStyle"
                />
    </LinearLayout>


    <EditText
            android:id="@+id/taskText"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/tasktexthint"
            android:gravity="top"
            android:inputType="textCapSentences|textMultiLine"/>

</LinearLayout>
